# Antigravity-Manager

src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src/components/accounts/: AccountRow.tsx
src/pages/: Accounts.tsx
