[package]
name = "antigravity_tools"
version = "2.0.2"
description = "A Tauri App"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antigravity_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
image = "0.25.9"
thiserror = "2.0.17"
tauri-plugin-single-instance = "2.3.6"

